infra/k8s/cloud/ingress/skillsly-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skillsly-backend-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: skillsly-api
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: "skillsly.app"
      http:
        paths:
          - pathType: Prefix
            path: /(.*)
            backend:
              service:
                name: skillsly-ag-srv
                port:
                  name: api-gateway
    - host: "api.skillsly.app"
      http:
        paths:
          - pathType: Prefix
            path: /soap/(.*)
            backend:
              service:
                name: skillsly-interface-srv
                port:
                  name: interface
    - host: "api.skillsly.app"
      http:
        paths:
          - pathType: Prefix
            path: /notification/(.*)
            backend:
              service:
                name: skillsly-notification-handler-srv
                port:
                  name: handler
    - host: "35.223.215.205.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: /(.*)
            backend:
              service:
                name: skillsly-ag-srv
                port:
                  name: api-gateway
    - host: "35.223.215.205.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: /soap/(.*)
            backend:
              service:
                name: skillsly-interface-srv
                port:
                  name: interface
    - host: "35.223.215.205.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: /notification/(.*)
            backend:
              service:
                name: skillsly-notification-handler-srv
                port:
                  name: notification-handler
  tls:
    - hosts:
      - 35.223.215.205.nip.io
      - api.skillsly.app
      secretName : skillsly-certificate

#---
