infra/k8s/cloud/ingress/skillsly-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skillsly-frontend-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: skillsly-wa
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: "skillsly.app"
      http:
        paths:
          - pathType: Prefix
            path: /(.*)
            backend:
              service:
                name: skillsly-wa-srv
                port:
                  name: wa
    - host: ".nip.io"
      http:
        paths:
          - pathType: Prefix
            path: /(.*)
            backend:
              service:
                name: skillsly-wa-srv
                port:
                  name: wa
  tls:
    - hosts:
        - .nip.io
        - skillsly.app
      secretName : skillsly-certificate
