infra/k8s/cloud/ingress/skillsly-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skillsly-backend-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: skillsly-api
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: "api.skillsly.app"
      http:
        paths:
          - pathType: Prefix
            path: /(.*)
            backend:
              service:
                name: skillsly-ag-srv
                port:
                  name: api-gateway
    - host: "api.skillsly.app"
      http:
        paths:
          - pathType: Prefix
            path: /soap/(.*)
            backend:
              service:
                name: skillsly-interface-srv
                port:
                  name: interface
    - host: "35.223.215.205.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: /(.*)
            backend:
              service:
                name: skillsly-ag-srv
                port:
                  name: api-gateway
    - host: "35.223.215.205.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: /soap/(.*)
            backend:
              service:
                name: skillsly-interface-srv
                port:
                  name: interface
  tls:
    - hosts:
      - 35.223.215.205.nip.io
      - api.skillsly.app
      secretName : skillsly-certificate

#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: skillsly-frontend-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
#    nginx.ingress.kubernetes.io/enable-cors: 'true'
#    nginx.ingress.kubernetes.io/use-regex: 'true'
#    nginx.ingress.kubernetes.io/ssl-redirect: "false"
#spec:
#  ingressClassName: nginx
#  rules:
#    - host: "skillsly.dev"
#      http:
#        paths:
#          - pathType: Prefix
#            path: /?(.*)
#            backend:
#              service:
#                name: skillsly-wa-srv
#                port:
#                  name: wa
